:sparkles: Add the greeting component that dispays a random message each time by using an api endpoint

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,20 @@
  *= require_tree .
  *= require_self
  */
+
+ * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+ }
+
+ body {
+    height: 100vh;
+ }
+
+ .wrapper {
+    max-width: 50%;
+    height: 40vh;
+    margin: 3rem auto;
+    border: 2px solid red;
+ }
